@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-10-02T00:53:12Z",
-  "count_outdated" : 1329,
-  "uniques_outdated" : 854,
-  "count" : 1334,
-  "uniques" : 859,
+  "timestamp" : "2024-10-03T00:53:03Z",
+  "count_outdated" : 1330,
+  "uniques_outdated" : 855,
+  "count" : 1335,
+  "uniques" : 860,
   "clones" : [
-    {
-      "timestamp": "2024-09-18T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-09-21T00:00:00Z",
       "count": 1,
@@ -43,6 +34,15 @@
     },
     {
       "timestamp": "2024-10-01T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-10-02T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
