@@ -1,12 +1,7 @@
 {
   "count": 5,
-  "uniques": 3,
+  "uniques": 2,
   "clones": [
-    {
-      "timestamp": "2024-09-18T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2024-09-21T00:00:00Z",
       "count": 1,
@@ -24,6 +19,11 @@
     },
     {
       "timestamp": "2024-10-01T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-10-02T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
