@@ -1,3 +1,12 @@
+2024-10-03T00:53:03Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11153949957 # 437
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-03
+* notice: last 14d: unq all: 2 5
+* notice: prev accum: outdated-unq outdated-all / unq all: 854 1329 / 859 1334
+* notice: next accum: outdated-unq outdated-all / unq all: 855 1330 / 860 1335
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2024-09-18] / [2024-10-02]
+
 2024-10-02T00:53:12Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11135904212 # 436
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-02
